fixes to mobile responsiveness (hiding resizer on mobile views)

--- a/modules/composer.less
+++ b/modules/composer.less
@@ -100,5 +100,10 @@
 @media (max-width: 767px) {
 	.composer {
 		width: 100%;
+		background: rgba(224, 224, 224, 1);
+	}
+
+	.resizer {
+		visibility: hidden;
 	}
 }
